[package]
name = "scs-servo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
indicatif = "0.17.8"
log = { version = "0.4.21", features = ["std"] }
nb = "1.1.0"
scs-servo = { path = "../scs-servo", features = ["std"] }
serialport = "4.3.0"
